configpod.yml
apiVersion: v1
kind: Pod
metadata:
   name: mypod1
spec:
    containers:
       - image: mysql
         name: mycont
         ports: 
          - containerPort: 3306
