labelfile.yml
apiVersion: v1
kind: Pod
metadata:
   name: myngpod
   labels:
     app: facebook
     env: hi
   namespace: myns
spec:
  containers:
    - image: nginx
      ports: 
       - containerPort: 80
      name: mynginx
