manifext.yml
apiVersion: v1
kind: Pod
metadata:
   name: myypod1
spec:
  containers:
    - image: nginx
      ports: 
       - containerPort: 80
      name: mynginx
