mymanifest.yml
apiVersion: v1
kind: Pod
metadata: 
 name: mydbpod
spec:
  containers:
    - image: mysql
      ports:
        - containerPort: 3306
          hostPort: 3306
      name: mysqlcont
