podpvc.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    app: dev
spec:
   containers:
     - image: nginx
       name: mycont
       ports:
        - containerPort: 80
       volumeMounts:
         - name: my-volume
           mountPath: /usr/share/nginx/html
   volumes:
      - name: my-volume
        persistentVolumeClaim:
           claimName: mypvc
