statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: merapod
spec:
     replicas: 3
     selector:
       matchLabels:
         app: test
     template: 
      metadata:
        labels:
          app: test
      spec:
        containers:
          - image: nginx
            name: mycont
            ports:
              - containerPort: 80
